# eece.7120.robotics

./: README.md  lane_controller_node.py  setup.sh
1_hw/: uploadAssignment.html
2_hw/obstacle_labeler/: package.xml
2_hw/obstacle_labeler/launch/: obstacle_labeler.launch
2_hw/obstacle_labeler/src/: ObstacleLabeler.cpp  obstacle_lableler_node.cpp
2_hw/obstacle_reporter/: package.xml
2_hw/obstacle_reporter/launch/: obstacle_reporter.launch
2_hw/obstacle_reporter/src/: obstacle_reporter_node.cpp
2_hw/random_numbers/: CMakeLists.txt
eece.7120.robotics_odom/: CMakeLists.txt
eece.7120.robotics_odom/launch/: odom_hw.launch
eece.7120.robotics_odom/src/: odom_calc.py
lane_detector/: color_and_line.py
mini_project_3/: CMakeLists.txt  package.xml
mini_project_3/launch/: lane_follow_custom.launch
mini_project_3/src/: lane_follow_custom.py
obstacle_labeler/include/obstacle_labeler/: ObstacleLabeler.hpp
obstacle_launcher/: CMakeLists.txt  package.xml
obstacle_launcher/launch/: launcher.launch
obstacle_reporter/include/obstacle_reporter/: ObstacleReporter.hpp
obstacle_reporter/src/: ObstacleReporter.cpp
point_generator/: CMakeLists.txt  package.xml
point_generator/include/point_generator/: PointGenerator.hpp
point_generator/launch/: point_generator.launch
setup_script/: setup.sh
setup_script/docker/: Dockerfile
setup_script/sandbox/ros/obstacle_labeler/: CMakeLists.txt
setup_script/sandbox/ros/obstacle_labeler/msg/: ReportObstacle.msg
setup_script/sandbox/ros/obstacle_reporter/: CMakeLists.txt
setup_script/sandbox/ros/point_generator/src/: PointGenerator.cpp  point_generator_node.cpp
